@@ -240,6 +240,7 @@ Diehl/Sappel IZAR RC 868 I R4 PL (izar) (non-standard protocol)
 Diehl HYDRUS (hydrus)
 Honeywell Q400 (q400)
 Kamstrup Multical 21 (multical21)
+Kamstrup flowIQ 2200 (flowiq2200)
 Kamstrup flowIQ 3100 (flowiq3100)
 Sontex Supercom 587 (supercom587)
 Sensus iPERL (iperl)
